--- a/Main.fxml
+++ b/Main.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4ea6d6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -15,7 +15,7 @@
             <Image url="@../../Users/Greg/Desktop/275917712_544614480247730_3347342849987388556_n.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="407.0" layoutY="14.0" text="Qualendar - &#10;Szolgálati Naptár" textAlignment="CENTER">
+      <Label layoutX="418.0" layoutY="74.0" text="Qualendar - &#10;Szolgálati Naptár" textAlignment="CENTER">
          <font>
             <Font name="Gentium Book Basic Bold" size="23.0" />
          </font>
@@ -35,5 +35,29 @@
             <Font name="Gentium Book Basic Bold" size="17.0" />
          </font>
       </Label>
+      <ImageView fx:id="ExitButtonMain" fitHeight="27.0" fitWidth="27.0" layoutX="559.0" layoutY="14.0" onMouseClicked="#ExitClickedMain" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Users/Greg/Desktop/x-close-icon-17.jpg" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="MaximizeButtonMain" fitHeight="27.0" fitWidth="27.0" layoutX="531.5" layoutY="14.0" onMouseClicked="#MaximizeClickedMain" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Users/Greg/Desktop/Maximize-55.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fx:id="MinimizeButtonMain" fitHeight="27.0" fitWidth="27.0" layoutX="504.0" layoutY="14.0" onMouseClicked="#MinimizeClickedMain" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Users/Greg/Desktop/Minimize-63.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
    </children>
 </AnchorPane>
