--- a/BossLogin.fxml
+++ b/BossLogin.fxml
@@ -50,6 +50,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <Button fx:id="BackBossLogin" layoutX="158.0" layoutY="361.0" mnemonicParsing="false" onAction="#BackButtonBossLogin" text="Button" />
          </children>
       </AnchorPane>
    </right>
