--- a/WorkerLogin.fxml
+++ b/WorkerLogin.fxml
@@ -50,6 +50,11 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <Button fx:id="BackWorkerLogin" layoutX="128.0" layoutY="347.0" mnemonicParsing="false" onAction="#BackButtonWorkerLogin" style="-fx-background-color: #feec02;" text="Vissza">
+               <font>
+                  <Font name="Gentium Book Basic Bold" size="20.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </right>
