--- a/BossLogin.fxml
+++ b/BossLogin.fxml
@@ -50,7 +50,10 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-            <Button fx:id="BackBossLogin" layoutX="158.0" layoutY="361.0" mnemonicParsing="false" onAction="#BackButtonBossLogin" text="Button" />
+            <Button fx:id="BackBossLogin" layoutX="116.0" layoutY="347.0" mnemonicParsing="false" onAction="#BackButtonBossLogin" style="-fx-background-color: #feec02;" text="Vissza">
+               <font>
+                  <Font name="Gentium Book Basic Bold" size="20.0" />
+               </font></Button>
          </children>
       </AnchorPane>
    </right>
